# autorunne

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  README.md  pyproject.toml
.agents/skills/autorunne-workflow/: SKILL.md
.claude/skills/autorunne-workflow/: SKILL.md
.cursor/rules/: autorunne-workflow.mdc
.github/: copilot-instructions.md
.github/workflows/: ci.yml  release.yml
docs/: AI-Workflow-CLI-Usage-EN.docx  AI-Workflow-CLI-Usage-EN.md  AI-Workflow-CLI-Usage-ZH.docx  AI-Workflow-CLI-Usage-ZH.md  Autorunne-Auto-Mode-ZH.md  Autorunne-LLM-Integration-ZH.md  Autorunne-Release-Notes-0.6.13-ZH.md  Autorunne-Release-Notes-0.6.14-ZH.md  Autorunne-Release-Notes-0.6.15-ZH.md  Autorunne-Release-Notes-0.6.16-ZH.md  Autorunne-Release-Notes-0.6.3-ZH.md  Autorunne-Release-Notes-0.6.4-ZH.md  Autorunne-Release-Notes-0.6.5-ZH.md  Autorunne-Release-Notes-0.6.6-ZH.md  Autorunne-Release-Notes-0.6.7-ZH.md  Autorunne-Release-Notes-0.6.8-ZH.md  Autorunne-Release-Notes-0.6.9-ZH.md  Autorunne-Release-Playbook-ZH.md  Autorunne-Usage-EN.md  Autorunne-Usage-ZH.docx  Autorunne-Usage-ZH.md  Autorunne-产品说明书-ZH.md  Autorunne-商业稳定性说明-ZH.md  Autorunne-商业计划书-ZH.md  Autorunne-对外定位与销售话术-ZH.md  Autorunne-操作手册-ZH.md
docs/plans/: 2026-04-20-autorunne-brand-unification.md  2026-04-20-sellable-lightweight-upgrade.md  2026-04-21-autorunne-state-engine-upgrade.md
scripts/: install.sh
src/autorunne/: __init__.py  cli.py
src/autorunne/commands/: __init__.py  adopt.py  auto_finish.py  checkpoint.py  completion.py  daemon.py  doctor.py  export.py  finish.py  hermes_task.py  history.py  hooks.py  ingest.py  init.py  integrate.py  migrate.py  open.py  record.py  release.py  render.py  show.py  start.py  status.py  sync.py  task.py  trace.py  vscode.py  watch.py
src/autorunne/core/: __init__.py  auto_record.py  exporter.py  filewatch.py  (+12 more)
src/awf/: __init__.py  cli.py
tests/: conftest.py  test_cli.py  test_docs.py  test_gitops_exporter.py  test_install_script.py  test_integrations.py  test_phase4_commands.py  test_scanner.py  test_state_engine.py  test_update_check.py
(+24 files in other folders)
