[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-workflow-cli"
version = "0.1.0"
description = "Attach a local-only AI workflow layer to any software project."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Hermes Agent" }
]
dependencies = [
  "typer>=0.12",
  "rich>=13.7",
  "pydantic>=2.8",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "python-docx>=1.1",
]

[project.scripts]
awf = "awf.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
