[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autorunne"
version = "0.6.13"
description = "Local-first agent development workspace that turns any repo into an Autorunne project."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Hermes Agent" }
]
license = "MIT"
keywords = ["ai", "cli", "workflow", "developer-tools", "codex", "claude-code"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Environment :: Console",
  "Topic :: Software Development :: Build Tools",
]
dependencies = [
  "typer>=0.12",
  "rich>=13.7",
  "pydantic>=2.8",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "python-docx>=1.1",
  "build>=1.2",
]

[project.urls]
Homepage = "https://github.com/keguihua/autorunne"
Repository = "https://github.com/keguihua/autorunne"
Issues = "https://github.com/keguihua/autorunne/issues"

[project.scripts]
autorunne = "autorunne.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
